TE-141: Search Testcases in Tree by name
Cleanups

Task-Url: https://testeditor.atlassian.net/browse/TE-141